about me spacing fix

--- a/sheets/styles.css
+++ b/sheets/styles.css
@@ -203,7 +203,6 @@ img {
 
 .text {
     font-size: 20px;
-    padding-left: 20px;
 }
 
 html,
@@ -229,8 +228,8 @@ h3 {
     display: inline-block;
     vertical-align: middle;
     text-align: center;
-    font-size: 16px;
-    width: 350px;
+    font-size: 24px;
+    width: 600px;
     margin: auto;
     line-height: 2;
     color: white;
